# Shop-Management-System

./: .env.example  .gitignore  AI_ASSISTANT_GUIDE.md  ARCHITECTURE.md  ARTIFACT_UPLOAD_FIX.md  AUTH_LOGOUT_FINAL_FIX.md  AUTH_SETUP.md  AUTH_SYSTEM_FIX.md  CROSS_REPO_SETUP_QUICK.md  DEVICE_TRUST_FINAL.md  FEATURES.md  FINE_GRAINED_TOKEN_CHECKLIST.md  FINE_GRAINED_TOKEN_SETUP.md  FIREBASE_AUTH_IMPLEMENTATION.md  FIREBASE_STORAGE_SETUP.md  FIREBASE_TAURI_SETUP.md  FIRESTORE_REPOSITORY_SETUP.md  FIRESTORE_SCHEMA.md  FORM_SUBMISSION_FIX.md  GITHUB_RELEASE_SETUP.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  INTERCEPTING_ROUTES_FINAL.md  INTERCEPTING_ROUTES_GUIDE.md  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  NUQS_INTEGRATION.md  POST_MIGRATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICK_FIX_PUBLISH_REPO.md  QUICK_REFERENCE.md  QUICK_START.md  REACTFIRE_MIGRATION.md  README.md  REFACTORING_COMPLETE.md  REFACTOR_SUMMARY.md  RESPONSIVE_MODAL_FOOTER_UPDATE.md  RESPONSIVE_MODAL_UPDATE.md  ROUTER_MIGRATION_COMPLETE.md  (+23 more)
.amazonq/rules/: SCALING_GUIDE.md  component-patterns.md  data-display-patterns.md  feature-guide.md  project-rules.md  quick-start.md  reactfire-guide.md  state-management.md  tanstack-router-guide.md
.github/: publish-to-auto-release.yml
.github/workflows/: publish-android.yml  publish-to-auto-release.yml  update-latest-json.yml
.next/: trace  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo  (+1 more)
.next/types/: validator.ts
docs/: ARCHITECTURE_DIAGRAM.md  COMPLETE_ARCHITECTURE.md  COMPONENT_CLEANUP_COMPLETE.md  COMPONENT_CLEANUP_TODO.md  COMPONENT_QUICK_REFERENCE.md  COMPONENT_REUSE_COMPLETE.md  DATA_DISPLAY_GUIDE.md  DATA_DISPLAY_SUMMARY.md  DATA_TABLE_MOBILE_GUIDE.md  INTERCEPTING_ROUTES_SIMPLE.md  MIGRATION_SUMMARY.md  MIGRATION_V2.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  REFACTORING_VISUAL_GUIDE.md  RESPONSIVE_ROUTING.md  SALE_ITEMS_TABLE_README.md  VISUAL_DIAGRAMS.md  app-bar-usage.md  list-detail-layout.md
docs/ai-rules/: 01-project-standards.md  02-architecture-patterns.md  03-component-patterns.md  05-quick-start.md  README.md
docs/implementation/: MIGRATION_COMPLETE.md  REFACTORING_COMPLETE.md
src/: main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json  mobile.json
src-tauri/keystore/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  email.rs  mod.rs  sms.rs
src/app/: global.css  index.tsx  layout.tsx  not-found.tsx  provider.tsx  providers.tsx  router.tsx
src/components/: app-sidebar.tsx  component-example.tsx  delete-confirmation-dialog.tsx  detail-actions-menu.tsx  example.tsx  gallery-upload.tsx  index.ts  list-detail-layout.tsx  login-06.tsx  logo.tsx  modal.tsx  nav-user.tsx  responsive-modal.tsx  shop-switcher.tsx  team-switcher.tsx  theme-switcher.tsx
src/config/: data-table.ts  quick-actions.ts  sidebar-config.tsx  units.ts  warranty-periods.ts
src/contexts/: app-bar.tsx
src/emails/: otp-email.tsx
src/features/: README.md  index.ts
src/hooks/: use-app-bar.tsx  use-auth.tsx  use-callback-ref.ts  use-command-context.ts  use-data-grid.tsx  use-data-table.ts  use-debounced-callback.ts  use-file-upload.ts  use-is-online.ts  use-mobile-updater.ts  use-online.ts  use-safe-area-insets.ts  use-safe-area.ts  use-shop.tsx  use-shops.ts  use-upload.example.tsx  use-upload.ts  use-user.ts  use-window-size.ts  useMainWindowEventListeners.ts
src/legacy-app/: global.css  index.tsx  provider.tsx  router.tsx
src/lib/: STORE_GUIDE.md  compose-refs.ts  data-grid.ts  data-table.ts  export.ts  filter-columns.ts  firebase.ts  firestore-utils.test.ts  firestore-utils.ts  format.ts  helpers.ts  id.ts  image-cache.ts  intercepting-routes.ts  logger.ts  notifications.ts  parsers.ts  permissions.ts  router-utils.ts  storage.ts  store.ts  swr-config.ts  tauri.ts  updater.ts  utils.ts
src/routes/: __root.tsx  _protected.tsx  auth.tsx
src/services/: auth.ts  email-service.ts  mobile-updater.ts  shop.ts
src/stores/: auth-store.ts  ui-store.ts
src/test/: auth-logout.test.tsx  auth.test.tsx
src/types/: auth.ts  complete-models.ts  data-grid.ts  data-table.ts  shop.ts
src/utils/: check-online.ts  index.ts  permissions.ts  platform-detection.ts
(+777 files in other folders)
