[package]
name = "shop-management-app"
version = "0.1.0"
description = "Shop Management System"
authors = ["prominhaj"]
edition = "2024"

[lib]
name = "shop_management_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "shop-management-app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-process = "2.3.0"
tauri-plugin-dialog = "2.4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2"
urlencoding = "2.1"
log = "0.4"
env_logger = "0.11"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-cache = "0.1.5"
tauri-plugin-persisted-scope = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"
tauri-plugin-safe-area-insets = "0.1.0"
